--- a/notebooks/01_train.ipynb
+++ b/notebooks/01_train.ipynb
@@ -28,12 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "49147963",
       "metadata": {
-        "id": "49147963"
+        "id": "49147963",
+        "outputId": "02cd73cf-7692-4a76-e385-26d729e4413f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "✅ Google Drive mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "# A0) Mount Google Drive\n",
         "from google.colab import drive\n",
@@ -43,18 +56,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "717c2c73",
       "metadata": {
-        "id": "717c2c73"
+        "id": "717c2c73",
+        "outputId": "f0ee4cc4-4dd5-451d-deb3-908c94e51cda",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "📁 DATA_DIR: /content/drive/MyDrive/Projects/ml-colab-agentic/data\n",
+            "📁 RUNS_DIR: /content/drive/MyDrive/Projects/ml-colab-agentic/runs\n",
+            "📁 LATEST_DIR: /content/drive/MyDrive/Projects/ml-colab-agentic/latest\n"
+          ]
+        }
+      ],
       "source": [
         "# A1) Paths: code in Colab VM; data/runs in Drive\n",
         "import os, sys, pathlib, time, shutil, subprocess, yaml, pandas as pd\n",
         "\n",
         "# ---- Drive anchors ----\n",
-        "GDRIVE_ROOT   = \"/content/drive/MyDrive\"\n",
+        "GDRIVE_ROOT   = \"/content/drive/MyDrive/Projects\"\n",
         "PROJECT_NAME  = \"ml-colab-agentic\"   # change if you fork/rename\n",
         "PROJECT_DRIVE = f\"{GDRIVE_ROOT}/{PROJECT_NAME}\"\n",
         "\n",
@@ -74,12 +101,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "76c7b3b9",
       "metadata": {
-        "id": "76c7b3b9"
+        "id": "76c7b3b9",
+        "outputId": "d697431f-09f2-48cb-df64-4e09a601780d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning https://github.com/armanfeili/ml-colab-agentic.git → /content/ml-colab-agentic ...\n",
+            "✅ Repository ready at: /content/ml-colab-agentic\n"
+          ]
+        }
+      ],
       "source": [
         "# A2) Clone/Update code from GitHub → /content (code stays in the VM)\n",
         "REPO_OWNER = \"armanfeili\"                              # <— your GitHub username\n",
@@ -106,12 +146,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "79be730c",
       "metadata": {
-        "id": "79be730c"
+        "id": "79be730c",
+        "outputId": "587393ef-e4cf-4658-a30c-d7b6f9394af7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Dependencies installed\n"
+          ]
+        }
+      ],
       "source": [
         "# A3) Install Python deps (from the repo's requirements.txt)\n",
         "subprocess.run([\"pip\", \"install\", \"-q\", \"-r\", f\"{REPO_PATH}/requirements.txt\"], check=True)\n",
@@ -120,12 +172,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "175b8477",
       "metadata": {
-        "id": "175b8477"
+        "id": "175b8477",
+        "outputId": "68d71db0-ea5c-45e8-97e3-113390a0a7a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Imports OK | torch: 2.8.0+cu126\n"
+          ]
+        }
+      ],
       "source": [
         "# A4) Add repo to import path and verify imports\n",
         "sys.path.insert(0, REPO_PATH)\n",
@@ -142,10 +206,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "ae09329a",
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "ae09329a",
+        "outputId": "776912bc-c2d5-4b72-8989-20e904cae72b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Cache paths set | CuDNN deterministic mode enabled\n"
+          ]
+        }
+      ],
       "source": [
         "# A4b) Robustness add-ons for reproducibility and efficiency\n",
         "from IPython.display import display  # used in Section D\n",
@@ -164,12 +242,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "f01d070a",
       "metadata": {
-        "id": "f01d070a"
+        "id": "f01d070a",
+        "outputId": "490f8b14-d624-4022-9083-73851d3dd5ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fri Oct 31 20:44:20 2025       \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
+            "|-----------------------------------------+------------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                        |               MIG M. |\n",
+            "|=========================================+========================+======================|\n",
+            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   40C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "|                                         |                        |                  N/A |\n",
+            "+-----------------------------------------+------------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                              |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+            "|        ID   ID                                                               Usage      |\n",
+            "|=========================================================================================|\n",
+            "|  No running processes found                                                             |\n",
+            "+-----------------------------------------------------------------------------------------+\n"
+          ]
+        }
+      ],
       "source": [
         "# A5) (Optional) GPU info\n",
         "!nvidia-smi"
@@ -187,12 +296,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "06ff79dd",
       "metadata": {
-        "id": "06ff79dd"
+        "id": "06ff79dd",
+        "outputId": "6aaf315e-4c30-4b3d-d9ac-7fa6208a41eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🏷️ RUN_ID : 2025-10-31_20-44_cifar10_simplenet_amp\n",
+            "📁 RUN_DIR: /content/drive/MyDrive/Projects/ml-colab-agentic/runs/2025-10-31_20-44_cifar10_simplenet_amp\n",
+            "✅ Config frozen at: /content/drive/MyDrive/Projects/ml-colab-agentic/runs/2025-10-31_20-44_cifar10_simplenet_amp/cfg.yaml\n"
+          ]
+        }
+      ],
       "source": [
         "# B0) Create a timestamped run folder in Drive and freeze config\n",
         "def new_run_id(dataset, model, note=\"\"):\n",
@@ -245,12 +368,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "3fc2afa1",
       "metadata": {
-        "id": "3fc2afa1"
+        "id": "3fc2afa1",
+        "outputId": "01cd0eda-5290-4c17-80dc-f98032b53448",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Metrics will be appended to: /content/drive/MyDrive/Projects/ml-colab-agentic/runs/2025-10-31_20-44_cifar10_simplenet_amp/metrics.csv\n"
+          ]
+        }
+      ],
       "source": [
         "# B1) Metrics logger (long-form CSV on Drive)\n",
         "METRICS_CSV = f\"{RUN_DIR}/metrics.csv\"\n",
@@ -275,12 +410,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "e504a089",
       "metadata": {
-        "id": "e504a089"
+        "id": "e504a089",
+        "outputId": "0350d705-8964-4622-e83f-87834c6c3ff5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Device: cuda | CUDA available: True\n"
+          ]
+        }
+      ],
       "source": [
         "# C0) Seed & device\n",
         "set_seed(CFG[\"seed\"])\n",
@@ -290,12 +437,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "b68fbb83",
       "metadata": {
-        "id": "b68fbb83"
+        "id": "b68fbb83",
+        "outputId": "8960ac90-6b82-416c-c8f1-a992301a7734",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Loading CIFAR10 from /content/drive/MyDrive/Projects/ml-colab-agentic/data/raw ...\n",
+            "✅ Train batches: 391 | Test batches: 79\n"
+          ]
+        }
+      ],
       "source": [
         "# C1) DataLoaders — downloads cached to Drive (CFG['data_root'])\n",
         "print(f\"Loading {CFG['dataset']} from {CFG['data_root']} ...\")\n",
@@ -309,12 +469,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "3e1c70d4",
       "metadata": {
-        "id": "3e1c70d4"
+        "id": "3e1c70d4",
+        "outputId": "cf9c0e5d-b74d-451c-ed31-446b46e022b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Model initialized on cuda\n",
+            "📦 Outputs will be stored in: /content/drive/MyDrive/Projects/ml-colab-agentic/runs/2025-10-31_20-44_cifar10_simplenet_amp\n"
+          ]
+        }
+      ],
       "source": [
         "# C2) Model + Optimizer\n",
         "model = SimpleNet(num_classes=10).to(device)\n",
@@ -328,9 +501,40 @@
       "execution_count": null,
       "id": "080096de",
       "metadata": {
-        "id": "080096de"
+        "id": "080096de",
+        "outputId": "82ce85bb-a143-4f1c-efe4-11adac7eec7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "🚀 Training for 5 epochs ...\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/content/ml-colab-agentic/src/utils.py:108: UserWarning: Converting a tensor with requires_grad=True to a scalar may lead to unexpected behavior.\n",
+            "Consider using tensor.detach() first. (Triggered internally at /pytorch/torch/csrc/autograd/generated/python_variable_methods.cpp:835.)\n",
+            "  loss_sum += float(loss) * x.size(0)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 01/5 | Train: loss=1.7002 acc=0.3794 | Val: loss=1.4023 acc=0.4912\n",
+            "Epoch 02/5 | Train: loss=1.3985 acc=0.4926 | Val: loss=1.2063 acc=0.5638\n"
+          ]
+        }
+      ],
       "source": [
         "# C3) Training loop → saves checkpoints & metrics to Drive\n",
         "best_val_acc = 0.0\n",
@@ -430,11 +634,17 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
